--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+	CHANGES IN trip VERSION 1.1-9
+
+SIGNIFICANT USER-VISIBLE CHANGES
+	   
+	o speed improvement in speedfilter, 6x or more
+
+
 	CHANGES IN trip VERSION 1.1-8
 
 ACKNOWLEDGEMENTS
