--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+	CHANGES IN trip VERSION 1.1-18
+
+OVERVIEW
+
+ o fixed missing Suggest for rgdal for CRAN (thanks to Prof. Ripley)
+
+ o new function sda, and efficient and flexible implementation of argosfilter
+
+SIGNIFICANT USER-VISIBLE CHANGES 
+
+ o cut can now accept a character
+  string like "2 hours" as per cut.POSIXt, rather than all explicit
+  interval boundaries
 
   CHANGES IN trip VERSION 1.1-17
 
