--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+  CHANGES IN trip VERSION 1.1-21
+  
+o modified PROJ.4 string in vignette for CRAN
+
+o moved vignette stub to knitr markdown
+  
+  CHANGES IN trip VERSION 1.1-20
+
+o rasterize for trip can now accept a 'field' argument to replace the default
+ time-spent calculation
+ 
+o trip now Imports raster, for use of rasterize to replace tripGrid
+
+o new function homedist
+
+o bug fix via complete rewrite of cut.trip, including modification of argument name "dates" to "breaks"
+
+o modified example with missing +ellps to satisfy new PROJ.4 (thanks to Roger Bivand)
+
   CHANGES IN trip VERSION 1.1-19
 
 o urgent bug fix release for trackDistance
